[package]
name = "kajam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kajam_lib"
crate-type = ["cdylib", "rlib"]
required-features = ["web"]

[dependencies]
bevy-inspector-egui = "0.11.0"
bevy_prototype_lyon = "0.5.0"
heron = { version = "3.1.0", features = ["2d"] }
noise = "0.7.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = [
  "animation",          # Animation support
  "bevy_winit",         # Window management
  "x11",                # Linux: Support X11 windowing system
  "filesystem_watcher", # Asset hot-reloading
  "render",             # Graphics Rendering

  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Higher-level rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit

  "png", # Png loading support

  "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
  "serialize",            # Support for `serde` Serialize/Deserialize
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
strip = "debuginfo"
lto = "thin"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.81"
wee_alloc = "0.4.5"
